--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,21 +7,13 @@
 <router-outlet></router-outlet>
 <app-messages></app-messages>
 
-
-
 <div style="background:#fff">
   <div class="site_container">
-    <div style="padding: 2em 0; font-size: .8em;">
+    <div style="padding: 3em 0; font-size: .8em;">
       <p>
         <b>NOTES </b><br />
         Site réalisé avec Angular 13.<br />
         L'API météo utilisée est openweathermap.<br />
-        <!-- <small>
-        Appel via le nom de ville pour la recherche libre<br/>
-        Appel via coordonnées pour les villes proposées en résultat de recherche ou via la carte<br/>
-        Appel via id pour mettre à jour les données stockées<br/>
-      </small>
-      <br/> -->
         Pour les villes francaise proposées dans le champs de recherche, l'API utilisée est geo.api.gouv.fr.<br />
         Carte : leaflet.js. <br />
         Les drapeaux associés à chaque ville viennent de l'API flagcdn.com
@@ -29,20 +21,24 @@
     </div>
   </div>
 </div>
-<!-- 
+
 <div [style]="{ background: '#e9faff', padding: '2em 0' }">
   <div class="site_container">
     <b>TODO : </b><br />
 
-    <span>Brancher les filtres de carte : pouvoir supprimer un layer, pas de deuplic </span>
+    <span>Quand géoloc mais on a deja resultat</span><br />
+    <span>Quand géoloc mais et que position a changé</span><br />
+    <span>Indication t° sur carte</span><br />
+
+    <del>Brancher les filtres de carte : pouvoir supprimer un layer, pas de duplic </del>
     <span>responsive design</span><br />
     <del>Pouvoir supprimer tous les favoris</del><br />
-    <span>debugger /albi?id=2525757 avec albi fr</span><br />
+    <del>debugger /albi?id=2525757 avec albi fr</del><br />
     <del>resultat recherche : proposer d'ouvrir la page détail</del><br />
     <span>unit test</span><br />
     <del>ajouter / supprimer des favoris depuis page detail</del><br />
     <span>ngDestroy ?</span> <br />
-    <span>Branchement dune visualisation sattelite de carte en direct ?</span><br />
+    <del>Branchement dune visualisation sattelite de carte en direct ?</del><br />
     <del>sur tuile position actuelle ajouté une indication</del><br />
     <del>en cas de lat long incorecttes les resulats suivant sont bloqués</del><br />
     <del>bug lien popup carte</del><br />
@@ -77,4 +73,4 @@
     <del>Décalage quand on a les 2 belaye et qu'on recharge : devient prayssac et
       ZIGUINCHOR </del><br />
   </div>
-</div> -->
+</div>
