--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,9 @@ a {
 	}
 }
 
+/* leaflet */
+/* leaflet */
+/* leaflet */
 .leaflet-container .leaflet-layer:first-child {
 	filter: saturate(0.5);
 }
@@ -85,6 +88,37 @@ a {
 	filter: drop-shadow(2px 4px 6px #0009);
 }
 
+.mapIcon {
+	display: flex;
+	/* align-items: center; */
+	flex-direction: column;
+	text-align: center;
+	font-size: .7em;
+}
+
+.mapIcon img {
+	width: 60px;
+	height: 60px;
+}
+
+.mapIcon span {
+	background: white;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 23px;
+	height: 23px;
+	line-height: 23px;
+	margin: -30px auto 0;
+	font-weight: bold;
+	border: 2px #000 solid;
+	position: relative;
+}
+
+/* leaflet */
+/* leaflet */
+/* leaflet */
 .loading {
 	padding: 1em;
 	display: flex;
