--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     Bienvenue sur ma météo !
   </b>
   <br />
-  <div style="width:800px; max-width:100%; text-align: left; font-size: .9em;">
+  <div>
     Pour commencer vous pouvez : <br />
     <ul>
       <li>Choisir une ville via la barre de recherche. </li>
@@ -17,15 +17,12 @@
   Chargement en cours ....
 </div>
 
-
-
 <div class="site_container grid_weather">
   <app-tile *ngFor="let place of WeatherService.weather_data" [place]="place">
   </app-tile>
 </div>
 
-<div class="site_container" style="display:flex;font-size:.7em; margin:0 0 8px"
-  *ngIf="WeatherService.weather_data.length > 3">
+<div class="site_container btnDeleteContainer" *ngIf="WeatherService.weather_data.length > 3">
   <div (click)="WeatherService.deleteAll()" class="btn">
     Supprimer tous les résultats
   </div>
