--- a/src/app/tile/tile.component.css
+++ b/src/app/tile/tile.component.css
@@ -1,9 +1,8 @@
 .tile {
-	/* aspect-ratio: 1 / 1; */
 	background: linear-gradient(to right top, #e6ebf2, #cad8ec, var(--color-1-50), #6fa3da00, #cad8ec);
 	background-size: 100% 100%;
 	border: 2px solid var(--color-1-50);
-	border-radius: 1em;
+	/* border-radius: 1em; */
 	text-align: center;
 	position: relative;
 	display: flex;
@@ -13,6 +12,11 @@
 	color: inherit;
 	text-decoration: none;
 	transition: 0.5s ease;
+}
+
+.tile.isMyPosition {
+	border: 2px solid var(--color-1);
+	box-shadow: 0 0 0 2px var(--color-1);
 }
 
 .tile>a {
