add unit test to utils.service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
         L'API météo utilisée est openweathermap.<br />
         Pour les villes francaise proposées dans le champs de recherche, l'API utilisée est geo.api.gouv.fr.<br />
         Carte : leaflet.js. <br />
-        Les drapeaux associés à chaque ville viennent de l'API flagcdn.com
+        Les drapeaux associés à chaque ville viennent de l'API flagcdn.com <br />
+        Lien GitHub : <a href="https://github.com/Raphaelmoi/meteo2022">https://github.com/Raphaelmoi/meteo2022</a>
       </p>
     </div>
   </div>
